--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,7 @@
 name: Build Android APK on Release
 
+permissions:
+  contents: write
 on:
   release:
     types: [published]   # runs when you publish a release (not just create a tag)
